public/styles/main.css
/* For all pages */
body {
    background: #DDDDDD;
    overflow: hidden;
    overflow-y: auto;
}

p {
    font-size: 10pt;
}

.page-container {
    padding-top: 70px;
    padding-bottom: 200px;
    position: relative;
    height: 100%;
}

.row {
    margin-bottom: 10px;
    margin-left: 0;
    margin-right: 0;
}

.pageTitle {
    margin-left: 5px;
    font-size: 30pt;
    text-decoration: underline overline;
}

.pageSubTitle {
    margin-left: 5px;
    font-size: 20pt;
    text-decoration: underline overline;
}

.cardTitle, .cardSubtitle {
    margin: 0px;
}

.cardList {
    margin-bottom: 10px;
}

.mdc-tab-bar {
    background-color: white;
    margin-bottom: 10px;
}

.btn-outline-light {
    color: #016A3A;
}

.btn-light {
    background-color: #016A3A;
    color: white;
}

.btn-light:hover {
    background-color: #016A3A;
    color: white;
    opacity: 0.8;
}

#nav-link,
.navbarMenuDrop,
.navbar-toggler,
.navbar {
    background-color: #016A3A;
    color: white !important;
}

.navbar-nav {
    margin-top: 0px;
}

#navbar {
    position: absolute;
    top: 0;
    z-index: 999;
    width:100%;
    margin-bottom: 100px;
}

#footer {
    position: absolute;
    bottom: 0;
    width: 100%;
}

#calendarMenu {
    margin-bottom: 10px;
}

#menuDropdown,
#loginBtn,
.navbar-toggler {
    cursor: pointer;
}

.nav-link {
    color: white;
    text-decoration: none;
    background-color: none;
}

.dropdownClickable {
    font-size: 12pt;
}

.dropLink {
    padding-left: 24px !important;
}

.nav-link:hover,
.dropdownClickable:hover {
    color: #f6b23b;
}

#navbarMenuDrop:focus,
#menuToggleIcon:focus,
#loginBtn:focus {
    border-color: #f6b23b;
    outline: none;
}

/* For index.html */
#greekLogo {
    width: 115px;
    height: 35px;
}

#coatOfArms {
    width: 85px;
    height: 137px;
}

#crossCresent {
    width: 80px;
    height: 80px;
}

#lcaTitle {
    font-family: Roboto;
    font-style: normal;
    font-weight: bold;
    font-size: 37px;
    line-height: 33px;
    display: flex;
    align-items: flex-end;
    color: #016A3A;
}

#roseTitle {
    font-family: Roboto;
    font-style: normal;
    font-weight: 500;
    font-size: 24px;
    font-weight: 750;
    line-height: 19px;
    display: flex;
    align-items: flex-end;
    color: #725220;
}

/* For profile.html */

.mdc-text-field {
    height: 53px;
    max-height: 53px;
    min-height: 53px;
}

.mdc-text-field--fullwidth {
    margin-left: 20px;
    margin-right: 20px;
    height: 53px;
    max-height: 53px;
    min-height: 53px;
}

.fullWidthLine {
    height: 53px;
    max-height: 53px;
    min-height: 53px;
}

#logout {
    margin-right: 55px;
}

.leftCol {
    margin-left: 5px;
}

.rightCol {
    margin-right: 5px;
}

@media (max-width: 475px) {
    #logout {
        margin-right: 0px;
    }
}

/* For thetaHourLogger.html */
#fabContainer {
    display: flex;
    position: sticky;
    justify-content: flex-end;
    bottom: 0px;
}

#fab {
    cursor: pointer;
    left:0px;
}

#fab:active {
    transform: translateY(4px);
    opacity: 0.8;
}

/* For thetaHourSignup.html */
#curDate {
    margin-right: 5px;
}

